--- a/PI-Videogames/api/package.json
+++ b/PI-Videogames/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -w ./src/functions.ts ",
+    "func": "tsc ./src/**.ts -w --outdir src/",
+    "routes": "tsc -w ./src/ts-built/*.ts --outdir ./src/routes/",
     "start": "nodemon -L",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
@@ -24,6 +25,7 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
